Simplify DB and create simple REST app
Create empty db for import and test REST app for importing records

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - mysql-phpmyadmin
 
   database:
-    image: mysql:latest
+    image: mariadb:latest
     ports:
       - 3306:3306
     environment:
